manifest/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: text-to-sql-api
  name: text-to-sql-api
  namespace: leesh-textsql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: text-to-sql-api
  template:
    metadata:
      labels:
        app: text-to-sql-api
    spec:
      containers:
      - name: text-to-sql-api
        image: sh80165/text-to-sql:202506102120
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1Gi
        livenessProbe:
          httpGet:
            path: /api/sql/health
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 20
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /api/sql/health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 5
      imagePullSecrets:
      - name: docker-cred
