manifest/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: text-to-sql-service
  namespace: leesh-textsql
  labels:
    app: text-to-sql-api
spec:
  type: ClusterIP
  selector:
    app: text-to-sql-api
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
