manifest/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: text-to-sql-ingress
  namespace: leesh-textsql
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: leesh80165.iptime.org
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: text-to-sql-service
            port:
              number: 8000
